Robust HLS-filtrering implementeret Publiceret version 3.0.2 beta7 6.juni

--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -6,8 +6,8 @@
             android:key="Filtrér akamai"
             android:title="Filtrér akamai"
             android:defaultValue="true"
-            android:summaryOn="Filtrér akamai for døde servere (ny opførelse)"
-            android:summaryOff="Filtrér ikke akamai for døde servere (gammel opførelse)"
+            android:summaryOn="Filtrér Akamai for døde servere (TEST AF NY KODE)"
+            android:summaryOff="Filtrér ikke Akamai for døde servere"
             />
 
     <CheckBoxPreference
