Fix: Senest spillet på kanalsiden blev ikke opdateret hvert 30. sekund Fix: Indlæser, vent venligst blev ikke altid erstattet af 'Netværksfejl' ved netværksfejl Småting

--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -21,7 +21,7 @@
             android:key="lydkvalitet"
             android:title="Lydkvalitet"
             android:defaultValue="auto"
-            android:summary="Standard er 96kbps og bruger ca. 45 MB data per time.\nHøj kvalitet bruger ca. 90 MB/time"
+            android:summary="Standard er 96kbps og bruger ca. 45 MB data per time, mens høj kvalitet bruger ca. 90 MB/time"
             android:entries="@array/lydkvalitet_tekst"
             android:entryValues="@array/lydkvalitet_kode"/>
 
