--- a/DRRadiov3/res/layout-land/kanal_elem0_aktuel_udsendelse.xml
+++ b/DRRadiov3/res/layout-land/kanal_elem0_aktuel_udsendelse.xml
@@ -75,6 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="16.30"
+                    android:importantForAccessibility="no"
                     android:layout_gravity="right"
                     android:layout_marginRight="4dp"
                     android:textColor="@color/hvid"
