Skift fra prod til udvikling, grunddata etc småting Hentede udsendelser - Accentfarve til udsendelser der er igang med at blive hentet Hentede udsendelser - Progressbar, linær

--- a/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
+++ b/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
@@ -33,7 +33,8 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical">
 
         <LinearLayout
                 android:orientation="vertical"
@@ -46,10 +47,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="17.04"
-                    android:textColor="@color/grå70"
+                    android:textColor="@color/sort"
                     android:textAppearance="?android:attr/textAppearance"
                     tools:ignore="HardcodedText"
                     />
+
+            <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progressBar"/>
 
             <TextView
                     android:id="@+id/linje2"
@@ -61,12 +68,19 @@
                     tools:ignore="HardcodedText"/>
         </LinearLayout>
 
+        <ImageView
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:id="@+id/startStopKnap"
+                android:contentDescription="pause"
+                android:src="@drawable/dri_radio_pause_graa40"/>
+
         <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
                 android:id="@+id/slet"
                 android:contentDescription="slet udsendelse"
-                android:src="@drawable/hentede_uds_skrald"/>
+                android:src="@drawable/hentede_uds_skraldespand"/>
 /*
         android:layout_width="44dp"
         android:layout_height="44dp"
