--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -2,7 +2,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <ListView
+    <dk.dr.radio.diverse.PinnedSectionListView
             android:id="@+id/listView"
             android:divider="@null"
             android:dividerHeight="0px"
