--- a/DRRadiov3/res/values-v11/dr_styles.xml
+++ b/DRRadiov3/res/values-v11/dr_styles.xml
@@ -5,6 +5,9 @@
   <style name="Theme.Dr" parent="@style/Theme.AppCompat.Light">
     <item name="android:actionBarStyle">@style/ActionBar.Solid.Dr</item>
     <item name="android:windowBackground">@color/hvid</item>
+    <!--
+    <item name="android:windowActionBarOverlay">true</item>
+    -->
   </style>
 
   <style name="ActionBar.Solid.Dr" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
