--- a/DRRadiov3/res/layout/udsendelse_elem0_inkl_hent_del.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_inkl_hent_del.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="44dp"
     android:orientation="horizontal">
 
 
@@ -11,17 +11,29 @@
       android:layout_width="0px"
       android:layout_height="match_parent"
       android:layout_weight="1"
-      android:layout_marginTop="8dp"
       android:paddingLeft="16dp"
       android:drawableLeft="@drawable/dri_hent_blaa"
       android:gravity="center_vertical"
-      android:text=" DOWNLOAD"
+      android:text="DOWNLOAD"
       android:contentDescription="hent udsendelse"
-      android:textAppearance="?android:attr/textAppearanceSmall"
+      android:textSize="16sp"
       android:background="@drawable/knap_hvid_bg"/>
   <!--
         android:text="UDSENDELSEN KAN IKKE HENTES"
         android:contentDescription="Udsendelsen kan ikke hentes"
   -->
+  <CheckBox
+      android:id="@+id/favorit"
+      android:layout_width="0px"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:drawableLeft="@drawable/dri_favorit"
+      android:paddingLeft="16dp"
+      android:contentDescription="favorit"
+      android:text="FAVORIT"
+      android:textColor="@color/blå"
+      android:textSize="16sp"
+      android:button="@null"
+      android:background="@drawable/knap_hvid_bg"/>
 
 </LinearLayout>
