--- a/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:text="LIGE NU"
         android:textSize="16sp"
-        android:background="@color/sort"
+        android:shadowColor="@color/sort"
+        android:shadowRadius="2"
         android:textColor="@color/blå"
         android:gravity="center_vertical|center_horizontal"
         android:paddingTop="4dp"
@@ -57,17 +58,16 @@
         android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/sort"
+        android:shadowColor="@color/sort"
+        android:shadowRadius="2"
         android:textColor="@color/hvid"
         android:text="PRESSEN PÅ P3"
         android:textSize="24sp"
         android:gravity="center_vertical"
         android:textStyle="bold"
-        android:paddingTop="0dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:paddingBottom="0dp"
-        android:layout_marginBottom="8dp"/>
+        android:paddingBottom="8dp"/>
 
   </LinearLayout>
 
