--- a/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="LIGE NU"
         android:textSize="16sp"
-        android:shadowColor="@color/sort"
+        android:shadowColor="@color/hvid"
         android:shadowRadius="2"
         android:textColor="@color/blå"
         android:gravity="center_vertical|center_horizontal"
