--- a/DRRadiov3/res/layout/afspiller_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_frag.xml
@@ -9,125 +9,6 @@
 
 
   <LinearLayout
-      android:id="@+id/udvidSkjulOmråde"
-      android:orientation="vertical"
-      android:layout_width="match_parent" android:layout_height="wrap_content">
-
-
-    <FrameLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content">
-
-
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="right"
-          android:layout_marginRight="16dp"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:text="42:30"
-          android:focusable="false"
-          android:importantForAccessibility="no"
-          android:contentDescription="@null"
-          android:singleLine="true"
-          android:id="@+id/seekBarMaxTekst"/>
-
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="16dp"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:text="2:30"
-          android:focusable="false"
-          android:importantForAccessibility="no"
-          android:contentDescription="@null"
-          android:singleLine="true"
-          android:id="@+id/seekBarTekst"/>
-    </FrameLayout>
-
-    <SeekBar
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:id="@+id/seekBar"
-        android:max="100"
-        android:progress="60"
-        android:focusable="false"
-        android:progressDrawable="@drawable/seekbar_progress"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
-
-      <ImageView
-          android:src="@drawable/dri_lyd_graa40"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-
-      <ImageView
-          android:src="@drawable/dri_lyd_graa40"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-    <!--
-        android:layerType="software" er nødvendig, ellers tegnes der en vandret
-         streg i stedet for stiplet linje på Android 3+
-        -->
-
-    <View
-        android:background="@drawable/stiplet_linje"
-        android:layerType="software"
-        android:layout_marginBottom="13dp"
-        android:layout_width="match_parent" android:layout_height="3dp"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-      <ImageView
-          android:src="@drawable/dri_lyd_graa40"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-
-      <SeekBar
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:id="@+id/lydstyrke"
-          android:max="100"
-          android:progress="60"
-          android:focusable="false"
-          />
-
-
-      <ImageView
-          android:src="@drawable/dri_indstillinger_graa40"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-
-
-    </LinearLayout>
-    <!--
-        android:layerType="software" er nødvendig, ellers tegnes der en vandret
-         streg i stedet for stiplet linje på Android 3+
-        -->
-
-    <View
-        android:background="@drawable/stiplet_linje"
-        android:layerType="software"
-        android:layout_marginBottom="13dp"
-        android:layout_width="match_parent" android:layout_height="3dp"/>
-
-  </LinearLayout>
-
-
-  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:contentDescription="afspillerkontrol"
@@ -200,7 +81,126 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:id="@+id/udvidSkjulKnap"
-        android:src="@drawable/dri_pil_ned_graa40"/>
+        android:src="@drawable/dri_pil_op_graa40"/>
 
   </LinearLayout>
+
+  <LinearLayout
+      android:id="@+id/udvidSkjulOmråde"
+      android:orientation="vertical"
+      android:layout_width="match_parent" android:layout_height="wrap_content">
+
+
+    <FrameLayout
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="right"
+          android:layout_marginRight="16dp"
+          android:textAppearance="?android:attr/textAppearanceSmall"
+          android:text="42:30"
+          android:focusable="false"
+          android:importantForAccessibility="no"
+          android:contentDescription="@null"
+          android:singleLine="true"
+          android:id="@+id/seekBarMaxTekst"/>
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="16dp"
+          android:textAppearance="?android:attr/textAppearanceSmall"
+          android:text="2:30"
+          android:focusable="false"
+          android:importantForAccessibility="no"
+          android:contentDescription="@null"
+          android:singleLine="true"
+          android:id="@+id/seekBarTekst"/>
+    </FrameLayout>
+
+    <SeekBar
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/seekBar"
+        android:max="100"
+        android:progress="60"
+        android:focusable="false"
+        android:progressDrawable="@drawable/seekbar_progress"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+
+      <ImageView
+          android:src="@drawable/dri_lyd_graa40"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
+      <ImageView
+          android:src="@drawable/dri_lyd_graa40"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <!--
+        android:layerType="software" er nødvendig, ellers tegnes der en vandret
+         streg i stedet for stiplet linje på Android 3+
+        -->
+
+    <View
+        android:background="@drawable/stiplet_linje"
+        android:layerType="software"
+        android:layout_margin="8dp"
+        android:layout_width="match_parent" android:layout_height="3dp"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+      <ImageView
+          android:src="@drawable/dri_lyd_graa40"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
+      <SeekBar
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:id="@+id/lydstyrke"
+          android:max="100"
+          android:progress="60"
+          android:focusable="false"
+          />
+
+
+      <ImageView
+          android:src="@drawable/dri_indstillinger_graa40"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+    <!--
+        android:layerType="software" er nødvendig, ellers tegnes der en vandret
+         streg i stedet for stiplet linje på Android 3+
+        -->
+
+    <View
+        android:background="@drawable/stiplet_linje"
+        android:layerType="software"
+        android:layout_margin="8dp"
+        android:layout_width="match_parent" android:layout_height="3dp"/>
+
+  </LinearLayout>
+
 </LinearLayout>
