--- a/DRRadiov3/res/layout/afspiller_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_frag.xml
@@ -10,7 +10,7 @@
 
   <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="@dimen/afspiller_kollapset_højde"
       android:contentDescription="afspillerkontrol"
       android:gravity="center_vertical"
       android:paddingLeft="8dp"
