--- a/DRRadiov3/res/layout/hoved_akt.xml
+++ b/DRRadiov3/res/layout/hoved_akt.xml
@@ -9,8 +9,7 @@
 
   <!-- As the main content view, the view below consumes the entire
        space available using match_parent in both dimensions. -->
-  <LinearLayout
-      android:orientation="vertical"
+  <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
@@ -19,20 +18,23 @@
 
     <FrameLayout
         android:id="@+id/indhold_frag"
+        android:layout_marginBottom="@dimen/afspiller_kollapset_højde"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        />
+        android:layout_height="match_parent">
+
+
+    </FrameLayout>
+
 
     <fragment
         android:id="@+id/afspiller_frag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:name="dk.dr.radio.akt.Afspiller_frag"
-        tools:layout="@layout/afspiller_lille_frag"/>
+        tools:layout="@layout/afspiller_frag"/>
 
-
-  </LinearLayout>
+  </FrameLayout>
 
 
   <!-- android:layout_gravity="start" tells DrawerLayout to treat
