--- a/DRRadiov3/res/values/dimens.xml
+++ b/DRRadiov3/res/values/dimens.xml
@@ -12,6 +12,9 @@
   <dimen name="hørknap_udvidet_klikområde">12dp</dimen>
   <dimen name="afspiller_kollapset_højde">56dp</dimen>
 
+  <!-- vi har brug for højden på afspilleren når den er udvidet -->
+  <dimen name="afspiller_udvidet_højde_gæt">165dp</dimen>
+
 
   <string name="akamaistatistik_device">Phone - Android</string>
 </resources>
