--- a/DRRadiov3/res/values/dr_farveskema.xml
+++ b/DRRadiov3/res/values/dr_farveskema.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <color name="rød">#ff0000</color>
   <color name="hvid">#ffffff</color>
   <color name="grå05x">#F2F2F2</color>
   <color name="grå10">#E5E5E5</color>
