Vækning - design og tjek for om App er installeret på SD-kort (så fungerer vækning ikke)

--- a/DRRadiov3/res/layout/deskclock_alarm_clock.xml
+++ b/DRRadiov3/res/layout/deskclock_alarm_clock.xml
@@ -37,7 +37,7 @@
         android:duplicateParentState="true"
         android:gravity="center"
         android:scaleType="center"
-        android:src="@drawable/deskclock_ic_menu_add"/>
+        android:src="@android:drawable/ic_input_add"/>
 
     <TextView
         android:layout_height="wrap_content"
