--- a/DRRadiov3/res/drawable/udsendelse_baggrundsgradient.xml
+++ b/DRRadiov3/res/drawable/udsendelse_baggrundsgradient.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
   <gradient
-      android:startColor="@color/grå10"
-      android:endColor="@color/grå80"
-      android:angle="90"/>
+      android:startColor="#00000000"
+      android:centerColor="#00000000"
+      android:endColor="#A0000000"
+      android:angle="270"/>
 </shape>
