--- a/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
@@ -15,21 +15,27 @@
       android:src="@drawable/eksempel_udsendelse"
       tools:ignore="ContentDescription"/>
 
-  <LinearLayout
-      android:layout_width="wrap_content"
+  <ImageView
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="12dp"
-      android:gravity="center_horizontal"
+      android:adjustViewBounds="true"
+      android:src="@drawable/udsendelse_baggrundsmaske"
+      tools:ignore="ContentDescription"/>
+
+  <RelativeLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:padding="12dp"
       android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
         android:src="@drawable/skrald__kanallogo_p3"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/p4navn"
@@ -37,21 +43,12 @@
         android:layout_height="wrap_content"
         android:text="Nordjylland"
         android:textStyle="bold"
+        android:layout_marginLeft="4dp"
         android:shadowColor="@color/hvid"
-        android:shadowRadius="2"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"/>
-  </LinearLayout>
-
-  <LinearLayout
-      android:id="@+id/lige_nu_og_titel_ll"
-      android:layout_gravity="left|bottom"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:layout_marginLeft="8dp"
-      android:layout_marginRight="8dp"
-      >
+        android:shadowRadius="4"
+        android:layout_alignBottom="@+id/logo"
+        android:layout_toRightOf="@+id/logo"
+        android:layout_toEndOf="@+id/logo"/>
 
 
     <TextView
@@ -67,7 +64,9 @@
         android:textStyle="bold"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        />
+        android:layout_above="@+id/startid"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/startid"
@@ -78,12 +77,12 @@
         android:shadowRadius="2"
         android:text="11. sep. 2014"
         android:textSize="20sp"
-        android:gravity="center_vertical"
         android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
-  </LinearLayout>
+  </RelativeLayout>
 
   <ImageButton
       android:id="@+id/hør"
