--- a/DRRadiov3/res/xml/indstillinger_udvikling.xml
+++ b/DRRadiov3/res/xml/indstillinger_udvikling.xml
@@ -10,6 +10,17 @@
 
     <PreferenceScreen android:dependency="udviklerEkstra"
                       android:title="Til udvikling og fejlfinding">
+      <!--       // XXX TODO Eksperiment - skal ud igen -->
+      <CheckBoxPreference
+          android:key="wakelockaltid" android:title="Hold telefon tændt altid"
+          android:summaryOn="test"/>
+
+      <CheckBoxPreference
+          android:key="partielwakelockPåMediaplayer" android:title="wakelockPåMediaplayer"
+          android:defaultValue="true"
+          />
+
+
       <CheckBoxPreference
           android:key="exoplayer" android:title="ExoPlayer"
           android:summaryOn="Den nye ExoPlayer benyttes!"
