--- a/DRRadiov3/res/layout/afspiller_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_frag.xml
@@ -48,7 +48,7 @@
 
       <TextView
           android:id="@+id/titel"
-          android:layout_width="match_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="x P3 Live"
           android:textAppearance="?android:attr/textAppearanceSmall"
@@ -59,7 +59,7 @@
 
       <TextView
           android:id="@+id/metainformation"
-          android:layout_width="match_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:text="x P3"
