Drama & Bog - mere

--- a/DRRadiov3/res/layout/drama_og_bog_frag.xml
+++ b/DRRadiov3/res/layout/drama_og_bog_frag.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -8,8 +7,7 @@
   <android.support.v4.view.ViewPager
      android:id="@+id/pager"
      android:layout_width="match_parent"
-     android:layout_height="0dp"
-    android:layout_weight="1"
+     android:layout_height="wrap_content"
     >
   </android.support.v4.view.ViewPager>
 
@@ -18,13 +16,8 @@
       android:padding="10dip"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
-      android:background="#FFCCCCCC"
-      app:radius="10dp"
-      app:fillColor="#FF888888"
-      app:pageColor="#88FF0000"
-      app:strokeColor="#FF000000"
-      app:strokeWidth="2dp"
-      />
+      android:background="@color/grå80"
+   />
 
 
   <dk.dr.radio.diverse.PinnedSectionListView
