--- a/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
@@ -15,6 +15,9 @@
 
   <include
       layout="@layout/kanal_elem0_inkl_billede_titel"
+      android:layout_marginTop="16dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
 
