--- a/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
@@ -2,9 +2,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
@@ -37,12 +34,12 @@
 
   -->
 
-  <RelativeLayout
+  <View
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginTop="-44dp"
       android:background="@drawable/udsendelse_baggrundsgradient"
-      >
-      </RelativeLayout>
+      />
 
   <RelativeLayout
       android:layout_width="match_parent"
@@ -64,7 +61,7 @@
         android:textStyle="bold"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:paddingBottom="8dp"
+        android:paddingBottom="12dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
