--- a/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
@@ -26,12 +26,12 @@
       android:src="@drawable/udsendelse_baggrundsmaske"
       tools:ignore="ContentDescription"/>
 -->
-  <RelativeLayout
+  <View
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginTop="-44dp"
       android:background="@drawable/udsendelse_baggrundsgradient"
-      >
-  </RelativeLayout>
+      />
 
   <RelativeLayout
       android:layout_width="match_parent"
