Design - Gibsonskrift i vækning, DRs egne ikoner på søg og del-knap

--- a/DRRadiov3/res/layout/deskclock_alarm_clock.xml
+++ b/DRRadiov3/res/layout/deskclock_alarm_clock.xml
@@ -40,6 +40,7 @@
         android:src="@android:drawable/ic_input_add"/>
 
     <TextView
+        android:id="@+id/tilføj_alarm"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center_vertical"
