--- a/DRRadiov3/res/menu/udsendelse.xml
+++ b/DRRadiov3/res/menu/udsendelse.xml
@@ -1,24 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
   <!--
-      <item
-              android:id="@+id/hør"
-              android:title="Hør udsendelse"
-              android:orderInCategory="1"
-              android:icon="@drawable/dri_lyd2_graa40"
-              app:showAsAction="always"/>
-      <item
-              android:id="@+id/hent"
-              android:title="Hent udsendelse"
-              android:orderInCategory="1"
-              android:icon="@drawable/dri_hent_graa40"
-              app:showAsAction="always"/>
-              -->
+      android:icon="@android:drawable/ic_menu_share"
+    -->
 
   <item
       android:id="@+id/del"
       android:title="Del"
       android:orderInCategory="1"
-      android:icon="@android:drawable/ic_menu_share"
+      android:icon="@drawable/dri_del_graa40"
       app:showAsAction="always"/>
 </menu>
